--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,11 @@
         "**/*.booproj":true,
         "**/*.pidb":true,
         "**/*.suo":true,
+        "**/*.sln":true,
         "**/*.user":true,
         "**/*.userprefs":true,
         "**/*.unityproj":true,
+        "**/*.csproj":true,
         "**/*.dll":true,
         "**/*.exe":true,
         "**/*.pdf":true,
@@ -42,14 +44,19 @@
         "**/*.meta":true,
         "**/*.prefab":true,
         "**/*.unity":true,
-        "build/":true,
         "Build/":true,
+        "build/":true,
+        "Packages/":true,
+        "packages/":true,
+        "Logs/":true,
+        "logs/":true,
         "Library/":true,
         "library/":true,
-        "obj/":true,
         "Obj/":true,
-        "ProjectSettings/":true,
+        "obj/":true,
+        "Temp/":true,
         "temp/":true,
-        "Temp/":true
+        "ProjectSettings/":true,
+        "UserSettings/":true
     }
 }
