--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,8 +48,8 @@
         "build/":true,
         "Packages/":true,
         "packages/":true,
-        "Logs/":true,
-        "logs/":true,
+        // "Logs/":true,
+        // "logs/":true,
         "Library/":true,
         "library/":true,
         "Obj/":true,
